WIP port from helix

--- a/crates/vim/Cargo.toml
+++ b/crates/vim/Cargo.toml
@@ -36,6 +36,8 @@ project.workspace = true
 regex.workspace = true
 rope.workspace = true
 schemars.workspace = true
+unicode-segmentation = "1.10"
+unicode-width = "0.1"
 search.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
